// SPDX-FileCopyrightText: (C) 2025 Intel Corporation
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package services.v1;

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/field_mask.proto";
import "resources/compute/v1/host_vpro.proto";
import "buf/validate/validate.proto";

option go_package = "github.com/open-edge-platform/infra-core/apiv2/v2/internal/pbapi/services/v1;servicesv1";

// Host.
service HostService {
  // Get a summary of the hosts status.
  rpc GetHostsSummary(GetHostSummaryRequest) returns (GetHostSummaryResponse) {
    option (google.api.http) = {get: "/edge-infra.orchestrator.apis/v2/hosts_summary"};
  }
  // Create a host.
  rpc CreateHost(CreateHostRequest) returns (resources.compute.v1.HostResource) {
    option (google.api.http) = {
      post: "/edge-infra.orchestrator.apis/v2/hosts"
      body: "host"
    };
  }
  // Get a list of hosts.
  rpc ListHosts(ListHostsRequest) returns (ListHostsResponse) {
    option (google.api.http) = {get: "/edge-infra.orchestrator.apis/v2/hosts"};
  }
  // Get a specific host.
  rpc GetHost(GetHostRequest) returns (resources.compute.v1.HostResource) {
    option (google.api.http) = {get: "/edge-infra.orchestrator.apis/v2/hosts/{resourceId}"};
  }
  // Update a host.
  rpc UpdateHost(UpdateHostRequest) returns (resources.compute.v1.HostResource) {
    option (google.api.http) = {
      put: "/edge-infra.orchestrator.apis/v2/hosts/{resourceId}"
      body: "host"
    };
  }
  // Patch a host.
  rpc PatchHost(PatchHostRequest) returns (resources.compute.v1.HostResource) {
    option (google.api.http) = {
      patch: "/edge-infra.orchestrator.apis/v2/hosts/{resourceId}"
      body: "host"
    };
  }  
  // Delete a host.
  rpc DeleteHost(DeleteHostRequest) returns (DeleteHostResponse) {
    option (google.api.http) = {delete: "/edge-infra.orchestrator.apis/v2/hosts/{resourceId}"};
  }
  // Invalidate a host.
  rpc InvalidateHost(InvalidateHostRequest) returns (InvalidateHostResponse) {
    option (google.api.http) = {put: "/edge-infra.orchestrator.apis/v2/hosts/{resourceId}/invalidate"};
  }
  // Register a host.
  rpc RegisterHost(RegisterHostRequest) returns (resources.compute.v1.HostResource) {
    option (google.api.http) = {
      post: "/edge-infra.orchestrator.apis/v2/hosts/register"
      body: "host"
    };
  }
  // Update a host registration.
  rpc PatchRegisterHost(RegisterHostRequest) returns (resources.compute.v1.HostResource) {
    option (google.api.http) = {
      patch: "/edge-infra.orchestrator.apis/v2/hosts/{resourceId}/register"
      body: "host"
    };
  }
  // Onboard a host.
  rpc OnboardHost(OnboardHostRequest) returns (OnboardHostResponse) {
    option (google.api.http) = {patch: "/edge-infra.orchestrator.apis/v2/hosts/{resourceId}/onboard"};
  }
}


// /////////////

// Request the summary of Hosts resources.
message GetHostSummaryRequest {
  // Optional filter to return only item of interest.
  // See https://google.aip.dev/160 for details.
  string filter = 1 [
    (google.api.field_behavior) = OPTIONAL,
    (buf.validate.field).string = {
      max_len: 1000
      pattern: "^$|^[a-zA-Z-_0-9.,:/=*(){}\"' ]+$"
    }
  ];
}

// Summary of the hosts status.
message GetHostSummaryResponse {
  // The total number of hosts.
  uint32 total = 1 [(google.api.field_behavior) = OUTPUT_ONLY];
  // The total number of hosts presenting an Error.
  uint32 error = 2 [(google.api.field_behavior) = OUTPUT_ONLY];
  // The total number of hosts in Running state.
  uint32 running = 3 [(google.api.field_behavior) = OUTPUT_ONLY];
  // The total number of hosts without a site.
  uint32 unallocated = 4 [(google.api.field_behavior) = OUTPUT_ONLY];
}

// Request message for the CreateHost method.
message CreateHostRequest {
  // The host to create.
  resources.compute.v1.HostResource host = 1 [(google.api.field_behavior) = REQUIRED];
}

// Response message for the CreateHost method.
message CreateHostResponse {
  // The created host.
  resources.compute.v1.HostResource host = 1 [(google.api.field_behavior) = REQUIRED];
}

// Request message for the GetHost method.
message GetHostRequest {
  // Name of the requested host.
  string resourceId = 1 [(google.api.field_behavior) = REQUIRED];
}

// Response message for the GetHost method.
message GetHostResponse {
  // The requested host.
  resources.compute.v1.HostResource host = 1 [(google.api.field_behavior) = REQUIRED];
}

// Request message for the ListHosts method.
message ListHostsRequest {
  // Optional comma separated list of fields to specify a sorting order.
  // See https://google.aip.dev/132 for details.
  string order_by = 1 [
    (google.api.field_behavior) = OPTIONAL,
    (buf.validate.field).string = {
      max_len: 1000
      pattern: "^$|^[a-zA-Z-_0-9., ]+$"
    }
  ];
  // Optional filter to return only item of interest.
  // See https://google.aip.dev/160 for details.
  string filter = 2 [
    (google.api.field_behavior) = OPTIONAL,
    (buf.validate.field).string = {
      max_len: 1000
      pattern: "^$|^[a-zA-Z-_0-9.,:/=*(){}\"' ]+$"
    }
  ];
  // Defines the amount of items to be contained in a single page.
  // Default of 20.
  uint32 page_size = 3 [
    (google.api.field_behavior) = OPTIONAL,
    (buf.validate.field).uint32 = {
      gte: 1
      lte: 100
    }
  ];
  // Index of the first item to return. This allows skipping items.
  uint32 offset = 4 [
    (google.api.field_behavior) = OPTIONAL,
    (buf.validate.field).uint32 = {
      gte: 0
      lte: 10000
    }
  ];
}

// Response message for the ListHosts method.
message ListHostsResponse {
  // Sorted and filtered list of hosts.
  repeated resources.compute.v1.HostResource hosts = 1 [(google.api.field_behavior) = REQUIRED];
  // Count of items in the entire list, regardless of pagination.
  int32 total_elements = 2 [(google.api.field_behavior) = REQUIRED];
  // Inform if there are more elements
  bool has_next = 3 [(google.api.field_behavior) = REQUIRED];
}

// Request message for the UpdateHost method.
message UpdateHostRequest {
  // Name of the host host to be updated.
  string resourceId = 1 [(google.api.field_behavior) = REQUIRED];
  // Updated values for the host.
  resources.compute.v1.HostResource host = 2 [(google.api.field_behavior) = REQUIRED];
}

// Request message for the PatchHost method.
message PatchHostRequest {
  // ID of the resource to be updated.
  string resourceId = 1 [(google.api.field_behavior) = REQUIRED];
  // Updated values for the host.
  resources.compute.v1.HostResource host = 2 [(google.api.field_behavior) = REQUIRED];
  // Field mask to be applied on the patch of host.
  google.protobuf.FieldMask field_mask = 3;
}

// Request message for DeleteHost.
message DeleteHostRequest {
  // Name of the host host to be deleted.
  string resourceId = 1 [(google.api.field_behavior) = REQUIRED];
}

// Reponse message for DeleteHost.
message DeleteHostResponse {}

// Request to invalidate/untrust a Host.
message InvalidateHostRequest {
  string resourceId = 1 [(buf.validate.field).string = {
    pattern: "^host-[0-9a-f]{8}$"
    max_bytes: 13
  }]; // Host resource ID

  string note = 2 [(buf.validate.field).string = {
    min_len: 1
    max_len: 512
    pattern: "^$|^[a-zA-Z-_0-9./:;=@?!#,<>*()\" ]+$"
  }]; // user-provided reason for change or a freeform field
}

// Response message for InvalidateHost.
message InvalidateHostResponse {}

// Message to register a Host.
message HostRegister {
  // The host name.
  string name = 3 [(buf.validate.field).string = {
    pattern: "^$|^[a-zA-Z-_0-9./: ]+$"
    max_len: 20
  }];

  // The host serial number.
  string serial_number = 16 [(buf.validate.field).string = {pattern: "^([A-Za-z0-9]{5,20})?$"}];
  // The host UUID.
  string uuid = 17 [
    (buf.validate.field).string = {
      min_len: 0
      max_len: 36
      pattern: "^$|^[0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{12}$"
    }
  ];

  // Flag to signal to automatically onboard the host.
  bool auto_onboard = 18;
  // Flag to signal to enable vPRO on the host.
  bool enable_vpro = 19;

  // LVM size in GB
  uint32 user_lvm_size = 20;
}

// Request to register a Host.
message RegisterHostRequest {
  string resourceId = 1 [(buf.validate.field).string = {
    pattern: "^host-[0-9a-f]{8}$"
    max_bytes: 13
  }];

  HostRegister host = 2 [(google.api.field_behavior) = REQUIRED];
}

// Request to onboard a Host.
message OnboardHostRequest {
  string resourceId = 1 [(buf.validate.field).string = {
    pattern: "^host-[0-9a-f]{8}$"
    max_bytes: 13
  }]; // Host resource ID
}

// Response of a Host Register request.
message OnboardHostResponse {}







